[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dnd-health"
description = ""
version = "1+local"
readme = "README.md"
authors = [{name = "George Hickman", email = "george@ghickman.co.uk"}]
requires-python = ">=3.10"
dependencies = [
  "playwright",
  "rich",
]

[project.scripts]
health = "health.__main__:main"

[tool.black]
exclude = '''
(
  /(
      \.git         # exclude a few common directories
    | \.direnv
    | \.github
    | \.pytest_cache
    | \.venv
    | htmlcov
    | venv
  )/
)
'''

[tool.coverage.run]
branch = true
omit = [".direnv/*", ".venv/*"]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.flit.module]
name = "health"

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_glob = [".direnv", "venv", ".venv"]

[tool.pytest.ini_options]

[tool.ruff]
exclude = [
  ".coverage",
  ".direnv",
  ".git",
  ".github",
  ".pytest_cache/",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "htmlcov",
]
extend-ignore = [
  "E501",
  "E741",
]
line-length = 88
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.isort]
lines-after-imports = 2
