[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dnd-health"
description = ""
version = "1+local"
readme = "README.md"
authors = [{name = "George Hickman", email = "george@ghickman.co.uk"}]
requires-python = ">=3.11"
dependencies = [
  "playwright==1.30.0",
  "rich==12.0.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "coverage==7.6.1",
    "ipdb==0.13.13",
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[project.scripts]
health = "health.__main__:main"

[tool.coverage.run]
branch = true
omit = [".direnv/*", ".venv/*"]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.flit.module]
name = "health"

[tool.pytest.ini_options]

[tool.ruff]
exclude = [
  ".coverage",
  ".direnv",
  ".git",
  ".github",
  ".pytest_cache/",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "htmlcov",
]
extend-ignore = [
  "E501",
  "E741",
]
line-length = 88
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.isort]
lines-after-imports = 2
