[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dnd-health"
description = ""
version = "1+local"
readme = "README.md"
authors = [{name = "George Hickman", email = "george@ghickman.co.uk"}]
requires-python = ">=3.11"
dependencies = [
  "playwright==1.51.0",
  "rich==14.0.0",
]

[project.scripts]
health = "health.__main__:main"

[dependency-groups]
dev = [
  "black==24.10.0",
  "coverage==7.6.1",
  "ipdb==0.13.13",
  "pytest==8.3.4",
  "ruff==0.8.4",
  "toml-sort>=0.24.2",
]

[tool.black]
extend-exclude = '''
(
  .ruff_cache
)
'''

[tool.coverage.html]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.flit.module]
name = "health"

[tool.pytest.ini_options]

[tool.ruff]
extend-exclude = [
  ".coverage",
  "__pycache__",
  "htmlcov",
]
line-length = 88

[tool.ruff.lint]
extend-ignore = [
  "E501",
  "E741",
]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.tomlsort]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
sort_first = [
  "build-system",
  "project",
]
